--- a/templates/inc/_footer.html
+++ b/templates/inc/_footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row row-cols-1 row-cols-lg-3">
             <div class="col">
-                <p class="text-muted my-2">Copyright&nbsp;© 2022 Brand</p>
+                <p class="text-muted my-2">Copyright&nbsp;© 2022 etech</p>
             </div>
             <div class="col">
                 <ul class="list-inline my-2">
@@ -30,12 +30,6 @@
                             </svg>
                         </div>
                     </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="list-inline my-2">
-                    <li class="list-inline-item"><a class="link-secondary" href="#">Privacy Policy</a></li>
-                    <li class="list-inline-item"><a class="link-secondary" href="#">Terms of Use</a></li>
                 </ul>
             </div>
         </div>
