--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-light navbar-expand-md shadow py-3">
     <div class="container"><a class="navbar-brand d-flex align-items-center" href="{% url 'index' %}"><span
             class="bs-icon-xl bs-icon-rounded bs-icon-semi-white d-flex justify-content-center align-items-center me-2 bs-icon"><img
-            src="{% static '/img/Logo%20E-tech%20dark.svg' %}"></span></a>
+            src="{% static '/img/android-chrome-512x512.png' %}" width="70"></span></a>
         <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
                 class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
@@ -25,7 +25,7 @@
 
             <a href="{% url 'update' %}" class="btn btn-light  border rounded border-2 border-secondary me-2"
                role="button">
-                <i class="fas fa-cogs me-2"></i>
+                <i class="fas fa-user-cog me-2"></i>
             </a>
 
             {% else %}
