--- a/account/templates/account/update.html
+++ b/account/templates/account/update.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Scraping: Ayarlar{% endblock %}
 {% block content %}
 <section class="position-relative py-4 py-xl-5">
     <div class="container">
