--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/android-chrome-192x192.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/android-chrome-512x512.png' %}">
     <link rel="manifest" href="{% static 'img/site.webmanifest' %}">
-    <title>scraping</title>
+    <title>{% block title %}Scraping: Əsas səhifə{% endblock %}</title>
     <link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/fonts/fontawesome-all.min.css' %}">
     <link rel="stylesheet" href="{% static '/css/styles.min.css' %}">
