--- a/crab/templates/crab/index.html
+++ b/crab/templates/crab/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container bg-light border rounded border-2 mt-5 p-2">
-    <h4 class="mb-3 text-center">Vakansiyaların toplanması və paylaşılması üzrə servis.</h4>
+    <h4 class="mb-3 text-center">Vakansiyaların toplanması və paylaşılması üzrə xidmət.</h4>
     <hr>
     <div class="row">
         <div class="col-md-6">
