--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="position-relative py-4 py-xl-5">
     <div class="container">
-        <h4 class="my-2">Xəta 500. Server xətası.</h4>
+        <h4 class="my-2">Xəta 404. Səhifə tapılmadı.</h4>
     </div>
 </section>
 {% endblock %}
